Overflow-x fixed

--- a/css/landing.css
+++ b/css/landing.css
@@ -32,7 +32,8 @@ Eg. div.something{
     
 }
 
-body{
+
+*{
     overflow-x: hidden;
 }
 
